--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/dannyvankooten/anonymous-analytics#readme",
   "dependencies": {
-    "blueimp-md5": "^2.12.0"
+    "mithril": "^2.0.4"
   },
   "devDependencies": {
     "webpack": "^4.41.2",
