--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "dependencies": {
     "chartist": "^0.11.4",
     "chartist-plugin-tooltips-updated": "^0.1.1",
-    "mithril": "^2.0.4",
-    "moment": "^2.24.0"
+    "date-fns": "^2.6.0",
+    "mithril": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -33,7 +33,6 @@
     "@babel/preset-env": "^7.6.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "moment-locales-webpack-plugin": "^1.1.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
