--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "chartist": "^0.11.4",
     "chartist-plugin-tooltips-updated": "^0.1.1",
     "date-fns": "^2.6.0",
-    "mithril": "^2.0.4"
+    "mithril": "^2.0.4",
+    "pikaday": "^1.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
