fix get_posts rest funct

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "NODE_ENV=development webpack --watch"
   },
   "private": true,
   "repository": {
