localize all strings & take start of week (day) into account for week presets and datepicker

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "NODE_ENV=development webpack --watch",
-	"download-referrer-blacklist": "curl https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt -k -o data/referrer-blacklist"
+	"download-referrer-blacklist": "curl https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt -k -o data/referrer-blacklist",
+	"create-pot": "wp i18n make-pot ."
   },
   "private": true,
   "repository": {
