--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,14 @@
   "type": "wordpress-plugin",
   "require": {
     "php": ">=7.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8.4"
+  },
+  "autoload": {
+    "classmap": [ "src/" ]
+  },
+  "scripts": {
+    "test": "./vendor/bin/phpunit --bootstrap vendor/autoload.php tests/"
   }
 }
