--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.6.3",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
