--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "watch": "NODE_ENV=development webpack --watch",
+    "watch": "set NODE_ENV=development && webpack --watch --progress",
     "download-referrer-blacklist": "curl https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt -k -o data/referrer-blacklist",
     "create-pot": "wp i18n make-pot ."
   },
