--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,15 @@
     "php": ">=7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.4"
+    "phpunit/phpunit": "^8.4",
+    "wp-coding-standards/wpcs": "^2.1",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0"
   },
   "autoload": {
     "classmap": [ "src/" ]
   },
   "scripts": {
-    "test": "./vendor/bin/phpunit --bootstrap vendor/autoload.php tests/"
+    "test": "./vendor/bin/phpunit --bootstrap vendor/autoload.php tests/",
+    "codestyle": "./vendor/bin/phpcs -s"
   }
 }
