--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "chart.js": "^2.9.1",
     "chartjs-adapter-date-fns": "^1.0.0-alpha1",
     "date-fns": "^2.6.0",
-    "mithril": "^2.0.4",
-    "pikaday": "^1.8.0"
+    "pikaday": "^1.8.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.7.0",
+    "@wordpress/babel-preset-default": "^4.7.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
