--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "chartjs-adapter-date-fns": "^1.0.0-alpha1",
     "date-fns": "^2.6.0",
     "pikaday": "^1.8.0",
+    "promise-polyfill": "8.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "whatwg-fetch": "3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
