polyfill es2015 using core-js and usage

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
   "presets": [
-	  ["@babel/preset-env", { "targets": "> 0.25%, not dead" }]
+	  ["@babel/preset-env", {
+		  "targets": "> 0.25%, not dead",
+		  "useBuiltIns": "usage",
+		  "corejs": 3
+	  }]
   ],
   "plugins": [
 	  [
