--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "chart.js": "^2.9.3",
     "chartjs-adapter-date-fns": "^1.0.0-alpha3",
+    "core-js": "^3.4.4",
     "date-fns": "^2.8.1",
     "pikaday": "^1.8.0",
     "promise-polyfill": "8.1.3",
