--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
 	  ["@babel/preset-env", {
-		  "targets": "> 0.25%, not dead",
+		  "targets": "> 0.2%, last 2 versions, not dead",
 		  "useBuiltIns": "usage",
 		  "corejs": 3
 	  }]
