--- a/package.json
+++ b/package.json
@@ -1,52 +1,57 @@
 {
-  "name": "koko-analytics",
-  "version": "1.0.0",
-  "description": "Privacy-friendly analytics for your WordPress site",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "NODE_ENV=development webpack --watch",
-    "download-referrer-blacklist": "curl https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt -k -o data/referrer-blacklist",
-    "create-pot": "wp i18n make-pot ."
-  },
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dannyvankooten/koko-analytics.git"
-  },
-  "keywords": [
-    "wordpress"
-  ],
-  "author": "Danny van Kooten",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/dannyvankooten/koko-analytics/issues"
-  },
-  "homepage": "https://github.com/dannyvankooten/koko-analytics#readme",
-  "dependencies": {
-    "chart.js": "^2.9.3",
-    "chartjs-adapter-date-fns": "^1.0.0-alpha3",
-    "core-js": "^3.4.4",
-    "date-fns": "^2.8.1",
-    "pikaday": "^1.8.0",
-    "promise-polyfill": "8.1.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "whatwg-fetch": "3.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-transform-react-jsx": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^5.0.5",
-    "css-loader": "^3.2.0",
-    "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
-  }
+	"name": "koko-analytics",
+	"version": "1.0.0",
+	"description": "Privacy-friendly analytics for your WordPress site",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack",
+		"watch": "NODE_ENV=development webpack --watch",
+		"download-referrer-blacklist": "curl https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt -k -o data/referrer-blacklist",
+		"create-pot": "wp i18n make-pot ."
+	},
+	"private": true,
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ibericode/koko-analytics.git"
+	},
+	"keywords": [
+		"wordpress"
+	],
+	"author": "Danny van Kooten",
+	"license": "GPL-3.0-or-later",
+	"bugs": {
+		"url": "https://github.com/ibericode/koko-analytics/issues"
+	},
+	"homepage": "https://github.com/ibericode/koko-analytics#readme",
+	"dependencies": {
+		"chart.js": "^2.9.3",
+		"chartjs-adapter-date-fns": "^1.0.0-alpha3",
+		"core-js": "^3.4.4",
+		"date-fns": "^2.8.1",
+		"pikaday": "^1.8.0",
+		"promise-polyfill": "8.1.3",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-router-dom": "^5.1.2",
+		"whatwg-fetch": "3.0.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.7.4",
+		"@babel/plugin-transform-react-jsx": "^7.7.4",
+		"@babel/preset-env": "^7.7.4",
+		"@babel/preset-react": "^7.7.4",
+		"babel-loader": "^8.0.6",
+		"copy-webpack-plugin": "^5.0.5",
+		"css-loader": "^3.2.0",
+		"node-sass": "^4.13.0",
+		"sass-loader": "^8.0.0",
+		"style-loader": "^1.0.0",
+		"webpack": "^4.41.2",
+		"webpack-cli": "^3.3.10"
+	},
+	"browserslist": [
+		"last 2 versions",
+		"> 0.2%",
+		"not dead"
+	]
 }
