--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"css-loader": "^3.3.0",
 		"node-sass": "^4.13.0",
 		"sass-loader": "^8.0.0",
+		"standard": "^14.3.1",
 		"style-loader": "^1.0.1",
 		"webpack": "^4.41.2",
 		"webpack-cli": "^3.3.10"
