add eslint and pass validation by checking proptypes & fixing spacing in JS

--- a/.editorconfig
+++ b/.editorconfig
@@ -17,6 +17,10 @@ indent_style = tab
 indent_style = space
 indent_size = 2
 
+[*.js]
+indent_style = space
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
 
