travis: use built-in npm caching strategy

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,6 @@ script:
   - composer run codestyle
   - npm run lint
 cache:
+  npm: true
   directories:
     - $HOME/.composer/cache
-    - $HOME/.npm
-    - $HOME/.nvm/.cache
-    - node_modules
