--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 language: php
-php:
-  - 7.3
-  - 7.4
-before_install:
-  - nvm install --latest-npm
-  - phpenv config-rm xdebug.ini # Disable XDebug to speed up PHP builds
 install:
+  - phpenv config-rm xdebug.ini # Disable XDebug to speed up PHP builds
   - composer install --no-interaction --prefer-dist
-  - npm install
 script:
   - composer run test
   - composer run codestyle
-  - npm run lint
+jobs:
+  include:
+    - php: 7.3
+    - php: 7.4
+    - language: node_js
+      node_js: 12
+      install: npm install
+      script: npm run lint
 cache:
   npm: true
   directories:
