add tests for number formatting, fix #49

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,29 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "standard"
-    ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-	  "dot-notation": "off"
-    }
+  "env": {
+	"browser": true,
+	"es6": true
+  },
+  "extends": [
+	"plugin:react/recommended",
+	"plugin:jest/recommended",
+	"standard"
+  ],
+  "globals": {
+	"Atomics": "readonly",
+	"SharedArrayBuffer": "readonly"
+  },
+  "parserOptions": {
+	"ecmaFeatures": {
+	  "jsx": true
+	},
+	"ecmaVersion": 2018,
+	"sourceType": "module"
+  },
+  "plugins": [
+	"react",
+	"jest"
+  ],
+  "rules": {
+	"dot-notation": "off"
+  }
 }
