--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "Privacy-friendly analytics for your WordPress site",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"build": "webpack --mode=production",
 		"watch": "webpack --mode=development --watch",
 		"download-referrer-blocklist": "curl https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt -k -o data/referrer-blocklist",
@@ -35,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.8.3",
+		"@babel/plugin-transform-modules-commonjs": "^7.8.3",
 		"@babel/plugin-transform-react-jsx": "^7.8.3",
 		"@babel/preset-env": "^7.8.3",
 		"@babel/preset-react": "^7.8.3",
@@ -44,15 +45,26 @@
 		"eslint": "^6.8.0",
 		"eslint-config-standard": "^14.1.0",
 		"eslint-plugin-import": "^2.20.0",
+		"eslint-plugin-jest": "^23.6.0",
 		"eslint-plugin-node": "^10.0.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-react": "^7.18.0",
 		"eslint-plugin-standard": "^4.0.1",
+		"jest": "^25.1.0",
 		"node-sass": "^4.13.1",
 		"prop-types": "^15.7.2",
 		"sass-loader": "^8.0.2",
 		"style-loader": "^1.1.3",
 		"webpack": "^4.41.5",
 		"webpack-cli": "^3.3.10"
+	},
+	"babel": {
+		"env": {
+			"test": {
+				"plugins": [
+					"@babel/plugin-transform-modules-commonjs"
+				]
+			}
+		}
 	}
 }
