show notice on dashboard page if an issue with WP Cron is detected

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "test": "./vendor/bin/phpunit --bootstrap vendor/autoload.php tests/",
-    "codestyle": "./vendor/bin/phpcs -n -s"
+    "codestyle": "./vendor/bin/phpcs -n -s",
+	"fix-codestyle": "./vendor/bin/phpcbf"
   }
 }
