--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
 	"homepage": "https://github.com/ibericode/koko-analytics#readme",
 	"dependencies": {
 		"date-fns": "^2.9.0",
+		"eslint-config-standard-preact": "^1.1.6",
+		"history": "^4.10.1",
 		"pikaday": "^1.8.0",
+		"preact": "^10.3.2",
+		"preact-router": "^3.2.1",
 		"promise-polyfill": "8.1.3",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
-		"react-router-dom": "^5.1.2",
 		"whatwg-fetch": "3.0.0"
 	},
 	"devDependencies": {
@@ -38,7 +39,6 @@
 		"@babel/plugin-transform-modules-commonjs": "^7.8.3",
 		"@babel/plugin-transform-react-jsx": "^7.8.3",
 		"@babel/preset-env": "^7.8.3",
-		"@babel/preset-react": "^7.8.3",
 		"babel-loader": "^8.0.6",
 		"copy-webpack-plugin": "^5.1.1",
 		"css-loader": "^3.4.2",
@@ -48,7 +48,6 @@
 		"eslint-plugin-jest": "^23.6.0",
 		"eslint-plugin-node": "^10.0.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.18.0",
 		"eslint-plugin-standard": "^4.0.1",
 		"jest": "^25.1.0",
 		"node-sass": "^4.13.1",
