--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
 	"homepage": "https://github.com/ibericode/koko-analytics#readme",
 	"dependencies": {
 		"date-fns": "^2.9.0",
-		"eslint-config-standard-preact": "^1.1.6",
 		"history": "^4.10.1",
 		"pikaday": "^1.8.0",
 		"preact": "^10.3.2",
 		"preact-router": "^3.2.1",
 		"promise-polyfill": "8.1.3",
-		"whatwg-fetch": "3.0.0"
+		"unfetch": "^4.1.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.8.3",
 		"@babel/plugin-transform-modules-commonjs": "^7.8.3",
 		"@babel/plugin-transform-react-jsx": "^7.8.3",
 		"@babel/preset-env": "^7.8.3",
+		"eslint-config-standard-preact": "^1.1.6",
 		"babel-loader": "^8.0.6",
 		"copy-webpack-plugin": "^5.1.1",
 		"css-loader": "^3.4.2",
