--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -13,9 +13,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Use Node.js 12
       uses: actions/setup-node@v1
       with:
-        node-version: 12
-    - run: npm ci
-    - run: npm run lint
+        node-version: '12'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Run linter
+      run: npm run lint
