--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,10 +1,6 @@
 name: PHP Composer
 
-on:
-  push:
-    branches: [ $default-branch ]
-  pull_request:
-    branches: [ $default-branch ]
+on: [ push, pull_request ]
 
 jobs:
   build:
@@ -18,7 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      
+
       - uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
