--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
 		"eslint-plugin-promise": "^4.3.1",
 		"eslint-plugin-standard": "^4.1.0",
 		"jest": "^25.5.4",
-		"node-sass": "^4.14.1",
 		"prop-types": "^15.7.2",
+		"sass": "^1.32.12",
 		"sass-loader": "^8.0.2",
 		"style-loader": "^1.2.1",
 		"webpack": "^4.46.0",
