--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"eslint-plugin-jest": "^23.20.0",
 		"eslint-plugin-node": "^10.0.0",
 		"eslint-plugin-promise": "^4.3.1",
+		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-standard": "^4.1.0",
 		"jest": "^25.5.4",
 		"prop-types": "^15.7.2",
