--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,12 +4,9 @@ on: [ push, pull_request ]
 
 jobs:
   build:
-
-    runs-on: ${{ matrix.operating-system }}
-
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        operating-system: [ ubuntu-latest, windows-latest ]
         php-versions: [ '7.3', '7.4', '8.0' ]
 
     steps:
