--- a/package.json
+++ b/package.json
@@ -24,39 +24,38 @@
 	},
 	"homepage": "https://github.com/ibericode/koko-analytics#readme",
 	"dependencies": {
-		"@wordpress/i18n": "^3.18.0",
-		"date-fns": "^2.17.0",
-		"history": "^4.10.1",
+		"@wordpress/i18n": "^4.0.0",
+		"date-fns": "^2.21.3",
+		"history": "^5.0.0",
 		"pikaday": "^1.8.0",
 		"preact": "^10.5.12",
 		"preact-router": "^3.2.1",
-		"promise-polyfill": "8.1.3",
+		"promise-polyfill": "^8.2.0",
 		"unfetch": "^4.1.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.16",
-		"@babel/plugin-transform-modules-commonjs": "^7.12.13",
-		"@babel/plugin-transform-react-jsx": "^7.12.16",
-		"@babel/preset-env": "^7.12.16",
+		"@babel/core": "^7.14.2",
+		"@babel/plugin-transform-modules-commonjs": "^7.14.0",
+		"@babel/plugin-transform-react-jsx": "^7.13.12",
+		"@babel/preset-env": "^7.14.2",
 		"babel-loader": "^8.2.2",
-		"copy-webpack-plugin": "^5.1.2",
-		"css-loader": "^3.6.0",
-		"eslint": "^6.8.0",
-		"eslint-config-standard": "^14.1.1",
+		"copy-webpack-plugin": "^8.1.1",
+		"css-loader": "^5.2.4",
+		"eslint": "^7.26.0",
+		"eslint-config-standard": "^16.0.2",
 		"eslint-config-standard-preact": "^1.1.6",
-		"eslint-plugin-import": "^2.22.0",
-		"eslint-plugin-jest": "^23.20.0",
-		"eslint-plugin-node": "^10.0.0",
-		"eslint-plugin-promise": "^4.3.1",
+		"eslint-plugin-import": "^2.23.2",
+		"eslint-plugin-jest": "^24.3.6",
+		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-react": "^7.23.2",
-		"eslint-plugin-standard": "^4.1.0",
+		"eslint-plugin-standard": "^5.0.0",
 		"jest": "^25.5.4",
 		"prop-types": "^15.7.2",
-		"sass": "^1.32.12",
-		"sass-loader": "^8.0.2",
-		"style-loader": "^1.2.1",
-		"webpack": "^4.46.0",
-		"webpack-cli": "^3.3.12"
+		"sass": "^1.32.13",
+		"sass-loader": "^11.1.1",
+		"style-loader": "^2.0.0",
+		"webpack": "^5.37.0",
+		"webpack-cli": "^4.7.0"
 	},
 	"babel": {
 		"env": {
