--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"eslint-plugin-import": "^2.23.2",
 		"eslint-plugin-jest": "^24.3.6",
 		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^4.3.1",
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-standard": "^5.0.0",
 		"jest": "^25.5.4",
