--- a/package.json
+++ b/package.json
@@ -34,29 +34,23 @@
 		"unfetch": "^4.1.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.14.2",
-		"@babel/plugin-transform-modules-commonjs": "^7.14.0",
-		"@babel/plugin-transform-react-jsx": "^7.13.12",
-		"@babel/preset-env": "^7.14.2",
-		"babel-loader": "^8.2.2",
-		"copy-webpack-plugin": "^8.1.1",
-		"css-loader": "^5.2.4",
-		"eslint": "^7.26.0",
-		"eslint-config-standard": "^16.0.2",
-		"eslint-config-standard-preact": "^1.1.6",
-		"eslint-plugin-import": "^2.23.2",
-		"eslint-plugin-jest": "^24.3.6",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^4.3.1",
-		"eslint-plugin-react": "^7.23.2",
-		"eslint-plugin-standard": "^5.0.0",
+		"@babel/core": "^7.20.5",
+		"@babel/plugin-transform-modules-commonjs": "^7.19.0",
+		"@babel/plugin-transform-react-jsx": "^7.19.0",
+		"@babel/preset-env": "^7.20.0",
+		"babel-loader": "^9.1.0",
+		"copy-webpack-plugin": "^11.0.0",
+		"css-loader": "^6.7.2",
+		"eslint": "^8.28.0",
+		"eslint-config-preact": "^1.3.0",
+		"eslint-plugin-jest": "^27.1.6",
 		"jest": "^29.0.3",
-		"prop-types": "^15.7.2",
-		"sass": "^1.32.13",
-		"sass-loader": "^11.1.1",
-		"style-loader": "^2.0.0",
-		"webpack": "^5.37.0",
-		"webpack-cli": "^4.7.0"
+		"prop-types": "^15.8.0",
+		"sass": "^1.56.0",
+		"sass-loader": "^13.2.0",
+		"style-loader": "^3.3.0",
+		"webpack": "^5.75.0",
+		"webpack-cli": "^5.0.0"
 	},
 	"babel": {
 		"env": {
