--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,4 +1,4 @@
-name: ESLint
+name: JS Lint
 
 on: [ push, pull_request ]
 
@@ -8,15 +8,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - name: Use Node.js 12
-      uses: actions/setup-node@v1
+    - name: Use Node.js v18.x
+      uses: actions/setup-node@v3
       with:
-        node-version: '12'
+        node-version: '18'
 
-    - name: Install dependencies
+    - name: Install NPM dependencies
       run: npm ci
 
-    - name: Run linter
+    - name: Run lint
       run: npm run lint
