--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,7 +4,7 @@ on: [ push, pull_request ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         php-versions: [ '7.4', '8.0', '8.1' ]
