--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   ],
   "type": "wordpress-plugin",
   "require": {
-    "php": ">=5.3"
+    "php": ">7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
