--- a/package.json
+++ b/package.json
@@ -24,41 +24,28 @@
 	},
 	"homepage": "https://github.com/ibericode/koko-analytics#readme",
 	"dependencies": {
-	  	"@wordpress/i18n": "^4.22.0",
-	  	"date-fns": "^2.21.3",
+		"@wordpress/i18n": "^4.22.0",
+		"date-fns": "^2.21.3",
 		"history": "^5.0.0",
 		"pikaday": "^1.8.0",
-		"preact": "^10.5.12",
-		"preact-router": "^3.2.1",
 		"promise-polyfill": "^8.2.0",
 		"unfetch": "^4.1.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.5",
-		"@babel/plugin-transform-modules-commonjs": "^7.19.6",
-		"@babel/plugin-transform-react-jsx": "^7.19.0",
 		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-react": "^7.22.15",
 		"babel-loader": "^9.1.0",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.2",
 		"eslint": "^8.28.0",
-		"eslint-config-preact": "^1.3.0",
 		"eslint-plugin-jest": "^27.1.6",
+		"eslint-plugin-react": "^7.33.2",
 		"jest": "^29.3.1",
-		"prop-types": "^15.8.1",
 		"sass": "^1.56.1",
 		"sass-loader": "^13.2.0",
 		"style-loader": "^3.3.1",
 		"webpack": "^5.75.0",
 		"webpack-cli": "^5.0.0"
-	},
-	"babel": {
-		"env": {
-			"test": {
-				"plugins": [
-					"@babel/plugin-transform-modules-commonjs"
-				]
-			}
-		}
 	}
 }
