--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
 		"@babel/core": "^7.22.19",
 		"@babel/preset-env": "^7.20.2",
 		"@babel/preset-react": "^7.22.15",
+		"@wordpress/browserslist-config": "^5.24.0",
 		"babel-loader": "^9.1.0",
+		"browserslist": "^4.21.10",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.2",
 		"eslint": "^8.28.0",
