--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"eslint-plugin-jest": "^27.1.6",
 		"eslint-plugin-react": "^7.33.2",
 		"jest": "^29.3.1",
+		"lightningcss": "^1.22.0",
 		"sass": "^1.56.1",
 		"style-loader": "^3.3.1",
 		"webpack": "^5.75.0",
