--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
 	},
 	"homepage": "https://github.com/ibericode/koko-analytics#readme",
 	"dependencies": {
-		"date-fns": "^2.21.3",
-		"pikaday": "^1.8.0"
+		"date-fns": "^2.21.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.19",
