--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,19 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "wp-coding-standards/wpcs": "^2.3",
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1"
+    "friendsofphp/php-cs-fixer": "^3.34"
   },
   "autoload": {
     "classmap": [ "src/" ]
   },
   "scripts": {
     "test": "php vendor/bin/phpunit --bootstrap tests/bootstrap.php  tests/",
-    "codestyle": "php vendor/bin/phpcs -n -s",
-	"codestyle-fix": "php vendor/bin/phpcbf"
+    "codestyle": "PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer check src/",
+	"codestyle-fix": "PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer fix src/"
   },
   "config": {
     "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true
+      "phpstan/extension-installer": true
     }
   }
 }
