revert to phpcs but with psr12 ruleset only. sorry wpcs.

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -35,8 +35,8 @@ jobs:
         if: steps.composer-cache.outputs.cache-hit != 'true'
         run: composer install --prefer-dist --no-progress
 
-      - name: Run test suite
+      - name: Run PHPUnit
         run: composer run-script test
 
-      - name: Run codestyle sniffer
-        run: composer run-script codestyle
+      - name: Run PHPCS
+        run: composer run-script lint
