--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
   "name": "ibericode/koko-analytics",
   "description": "Privacy-friendly analytics for your WordPress site",
-  "keywords": ["wordpress", "analytics", "statistics"],
-  "homepage": "https://wordpress.org/plugins/koko-analytics/",
+  "keywords": [
+    "wordpress",
+    "analytics",
+    "statistics"
+  ],
+  "homepage": "https://www.kokoanalytics.com/",
   "license": "GPL-3.0-or-later",
   "authors": [
     {
@@ -17,19 +21,16 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "friendsofphp/php-cs-fixer": "^3.34"
+    "squizlabs/php_codesniffer": "^3.7"
   },
   "autoload": {
-    "classmap": [ "src/" ]
+    "classmap": [
+      "src/"
+    ]
   },
   "scripts": {
     "test": "php vendor/bin/phpunit --bootstrap tests/bootstrap.php  tests/",
-    "codestyle": "PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer check src/",
-	"codestyle-fix": "PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer fix src/"
-  },
-  "config": {
-    "allow-plugins": {
-      "phpstan/extension-installer": true
-    }
+    "lint": "vendor/bin/phpcs -n -s",
+    "fmt": "vendor/bin/phpcbf"
   }
 }
