--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   ],
   "type": "wordpress-plugin",
   "require": {
-    "php": ">7.0"
+    "php": ">7.0",
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
