--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
 	},
 	"homepage": "https://github.com/ibericode/koko-analytics#readme",
 	"dependencies": {
-		"date-fns": "^2.21.3"
+		"date-fns": "^2.21.3",
+		"snabbdom": "^3.5.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.19",
 		"@babel/preset-env": "^7.20.2",
-		"@babel/preset-react": "^7.22.15",
 		"@wordpress/browserslist-config": "^5.24.0",
 		"babel-loader": "^9.1.0",
 		"browserslist": "^4.21.10",
@@ -37,7 +37,6 @@
 		"css-loader": "^6.7.2",
 		"eslint": "^8.28.0",
 		"eslint-plugin-jest": "^27.1.6",
-		"eslint-plugin-react": "^7.33.2",
 		"jest": "^29.3.1",
 		"lightningcss": "^1.22.0",
 		"style-loader": "^3.3.1",
