render totals component server side on page load

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,10 @@
   "autoload": {
     "classmap": [
       "src/"
+    ],
+    "files": [
+      "src/functions.php",
+      "src/global-functions.php"
     ]
   },
   "scripts": {
