--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,13 @@
 {
 	"env": {
 		"browser": true,
-		"es2021": true,
-		"amd": true
+		"es6": true
 	},
 	"extends": [
 		"eslint:recommended",
 		"plugin:jest/recommended"
 	],
 	"parserOptions": {
-		"ecmaVersion": "latest",
 		"sourceType": "module"
 	}
 }
