--- a/assets/src/manifest.json
+++ b/assets/src/manifest.json
@@ -4,6 +4,12 @@
   "description": "Analytics dashboard for your WordPress site. Powered by Koko Analytics.",
   "icons": [
     {
+      "src": "img/icon.svg",
+      "sizes": "48x48 72x72 96x96 128x128 256x256 512x512",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
       "src": "img/icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512",
@@ -22,10 +28,10 @@
       "purpose": "maskable"
     },
     {
-      "src": "img/icon.svg",
-      "sizes": "48x48 72x72 96x96 128x128 256x256 512x512",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "src": "img/icon-64x64.png",
+      "type": "image/png",
+      "sizes": "64x64",
+      "purpose": "maskable"
     }
   ],
   "display": "standalone",
