--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "koko-analytics",
+	"type": "module",
 	"description": "Privacy-friendly analytics for your WordPress site",
 	"scripts": {
-		"test": "jest",
+		"test": "NODE_OPTIONS=--experimental-vm-modules jest",
 		"build": "webpack --mode=production",
 		"watch": "webpack --mode=development --watch",
 		"download-referrer-blocklist": "curl https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt -k -o data/referrer-blocklist",
