--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"type": "module",
 	"description": "Privacy-friendly analytics for your WordPress site",
 	"scripts": {
-		"test": "NODE_OPTIONS=--experimental-vm-modules jest",
+		"test": "node --experimental-vm-modules --experimental-default-type=module node_modules/jest/bin/jest.js",
 		"build": "webpack --mode=production",
 		"watch": "webpack --mode=development --watch",
 		"download-referrer-blocklist": "curl https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt -k -o data/referrer-blocklist",
@@ -34,5 +34,8 @@
 		"jest": "^29.3.1",
 		"webpack": "^5.75.0",
 		"webpack-cli": "^5.0.0"
+	},
+	"jest": {
+    	"transform": {}
 	}
 }
