--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "koko-analytics",
 	"description": "Privacy-friendly analytics for your WordPress site",
 	"scripts": {
-		"test": "node node_modules/jest/bin/jest.js",
+		"test": "node --experimental-default-type=module assets/src/js/util/numbers.test.js",
 		"build": "webpack --mode=production",
 		"watch": "webpack --mode=development --watch",
 		"download-referrer-blocklist": "curl https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt -k -o data/referrer-blocklist",
@@ -30,11 +30,10 @@
 		"copy-webpack-plugin": "^11.0.0",
 		"eslint": "^8.28.0",
 		"eslint-plugin-jest": "^27.1.6",
-		"jest": "^29.3.1",
 		"webpack": "^5.91.0",
 		"webpack-cli": "^5.1.4"
 	},
 	"jest": {
-    	"transform": {}
+		"transform": {}
 	}
 }
