--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"watch": "webpack --mode=development --watch",
 		"download-referrer-blocklist": "curl https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt -k -o data/referrer-blocklist",
 		"create-pot": "wp i18n make-pot .",
-		"lint": "eslint assets/src/js/. --ext js"
+		"lint": "eslint assets/src/js/*.js"
 	},
 	"private": true,
 	"repository": {
@@ -27,8 +27,10 @@
 		"snabbdom": "^3.5.1"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.5.0",
 		"copy-webpack-plugin": "^11.0.0",
-		"eslint": "^8.28.0",
+		"eslint": "^9.5.0",
+		"globals": "^15.6.0",
 		"webpack": "^5.91.0",
 		"webpack-cli": "^5.1.4"
 	}
