add benchmark that we run in CI

--- a/.github/workflows/build-test-lint.yml
+++ b/.github/workflows/build-test-lint.yml
@@ -44,3 +44,6 @@ jobs:
       - name: Run lint
         run: npm run lint
 
+      - name: Run benchmark
+        run: php tests/benchmarks/plugin.php
+
