--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6",
-    "squizlabs/php_codesniffer": "^3.11"
+    "squizlabs/php_codesniffer": "^3.11",
+    "nikic/php-parser": "^5.7"
   },
   "scripts": {
     "test": "vendor/bin/phpunit",
