--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,21 @@
   "require-dev": {
     "phpunit/phpunit": "^9.6",
     "squizlabs/php_codesniffer": "^3.11",
-    "nikic/php-parser": "^5.7"
+    "nikic/php-parser": "^5.7",
+    "phpstan/phpstan": "^2.1",
+    "szepeviktor/phpstan-wordpress": "^2.0",
+    "phpstan/extension-installer": "^1.4"
   },
   "scripts": {
     "test": "vendor/bin/phpunit",
     "check-syntax": "bin/check-php-syntax",
     "lint": "vendor/bin/phpcs -n -s",
+    "analyse": "vendor/bin/phpstan analyse",
     "fmt": "vendor/bin/phpcbf"
+  },
+  "config": {
+    "allow-plugins": {
+      "phpstan/extension-installer": true
+    }
   }
 }
