--- a/.github/workflows/check-php-syntax.yml
+++ b/.github/workflows/check-php-syntax.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: ['7.4', '8.0', '8.1', '8.2', '8.3', 'highest']
+        php-versions: ['7.4', '8.0', '8.1', '8.2', '8.3']
     steps:
       # Install PHP interpreter
       - name: Setup PHP
@@ -16,9 +16,7 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           ini-file: development
 
-      # Checkout source repository
       - name: checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
 
-      # Lint every PHP source file using PHP interpreter
       - run: composer run check-syntax
