chore: add migrations/ dir to phpstan

--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -3,6 +3,7 @@ parameters:
     paths:
         - koko-analytics.php
         - src/
+        - migrations/
         - tests/
     excludePaths:
         analyse:
