chore: add wp-cli stubs and include Command class in phpstan analysis

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "nikic/php-parser": "^5.7",
     "phpstan/phpstan": "^2.1",
     "szepeviktor/phpstan-wordpress": "^2.0",
-    "phpstan/extension-installer": "^1.4"
+    "phpstan/extension-installer": "^1.4",
+    "php-stubs/wp-cli-stubs": "^2.12"
   },
   "scripts": {
     "test": "vendor/bin/phpunit",
