--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -4,8 +4,14 @@ parameters:
         - koko-analytics.php
         - src/
         - migrations/
+        - code-snippets/
         - tests/
     excludePaths:
         analyse:
-            - src/Command.php
             - tests/benchmarks
+    scanFiles:
+        - %rootDir%/../../php-stubs/wordpress-stubs/wordpress-stubs.php
+        - %rootDir%/../../php-stubs/wp-cli-stubs/wp-cli-stubs.php
+        - %rootDir%/../../php-stubs/wp-cli-stubs/wp-cli-commands-stubs.php
+        - %rootDir%/../../php-stubs/wp-cli-stubs/wp-cli-i18n-stubs.php
+        - %rootDir%/../../php-stubs/wp-cli-stubs/wp-cli-tools-stubs.php
